--- a/TritexHalloween.StoryManager/TritexHalloween.StoryManager.csproj
+++ b/TritexHalloween.StoryManager/TritexHalloween.StoryManager.csproj
@@ -46,14 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FRM_Main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FRM_Main.Designer.cs">
+      <DependentUpon>FRM_Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FRM_Main.resx">
+      <DependentUpon>FRM_Main.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -75,6 +78,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TritexHalloween.Networking\TritexHalloween.Networking.csproj">
+      <Project>{104d3634-79b6-4d25-8552-fb1b79cfe367}</Project>
+      <Name>TritexHalloween.Networking</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TritexHalloween.StoryObjects\TritexHalloween.StoryObjects.csproj">
+      <Project>{02b00bb5-87f0-40f2-96bd-4ebdb46b9968}</Project>
+      <Name>TritexHalloween.StoryObjects</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
