--- a/TritexHalloween.StoryObjects/TritexHalloween.StoryObjects.csproj
+++ b/TritexHalloween.StoryObjects/TritexHalloween.StoryObjects.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adventurer.cs" />
+    <Compile Include="Breach.cs" />
     <Compile Include="HeartRateMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SetHeartRate.cs" />
